@@ -1256,6 +1256,11 @@ literal|"unchecked"
 argument_list|)
 annotation|@
 name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|60000
+argument_list|)
 DECL|method|testBlockNewContainerRequestsOnStartAndResync ()
 specifier|public
 name|void
